# AutoClap

./: .gitignore  README.md  pyproject.toml
autoclap/core/output/: __init__.py  detector_output.py  detector_pipeline_output.py  ocr_output.py
autoclap/core/sampler/: __init__.py  base.py  head_video_sampler.py  interval_video_sampler.py  sequential_video_sampler.py  time_sliding_video_sampler.py  uniform_video_sampler.py
autoclap/detect/: detector_pipeline.py
autoclap/detect/base/: __init__.py  base_detector.py
autoclap/detect/yolov8/: __init__.py  detector.py
autoclap/detector/: __init__.py  detector_pipeline.py
autoclap/detector/base/: base_detector.py
autoclap/detector/yolov8/: detector.py
autoclap/ocr/: __init__.py  ocr_pipeline.py
autoclap/ocr/base/: __init__.py  base_ocr.py
autoclap/ocr/paddleocr/: __init__.py  ocr.py
